--- a/testapp/templates/testapp/login.html
+++ b/testapp/templates/testapp/login.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>로그인</title>
+  <title>LOGIN</title>
   <meta charset="utf-8">
   <script>
     function send1() {
-      alert('로그인')
       document.getElementById( "login" ).submit()
     }
   </script>
@@ -14,9 +13,9 @@
   <div class="login-form">
     <form id='login' method="POST">
       {% csrf_token %}
-      <input type="text" name="userid" class="text-field" placeholder="아이디">
-      <input type="password" name="password" class="text-field" placeholder="비밀번호">
-      <input type="submit" value="로그인" class="submit-btn" onclick="send1();">
+      <input type="text" name="userid" class="text-field" placeholder="ID">
+      <input type="password" name="password" class="text-field" placeholder="Password">
+      <input type="submit" value="Login" class="submit-btn" onclick="send1();">
     </form>
   </div>
 </body>
