--- a/testapp/templates/testapp/message.html
+++ b/testapp/templates/testapp/message.html
@@ -12,7 +12,7 @@
             }
 
             function ctf() {
-                location.href='ctf/'
+                location.href='http://127.0.0.1:8000/ctf'
             }
         </script>
     </head>
