--- a/testapp/templates/testapp/mypage.html
+++ b/testapp/templates/testapp/mypage.html
@@ -7,11 +7,11 @@
             }
 
             function initscore() {
-                document.getElementById("initscore").submit()
+                document.getElementById("data").submit()
             }
 
             function deluser() {
-                location.href='/resign'
+                location.href='/aevkajhefhwo34paw89r1v2o95uqw98r3'
             }
         </script>
     </head>
@@ -23,8 +23,8 @@
             {% csrf_token %}
             <input type="hidden" name="onclick" value="score">
             <input type="button" Value="initscore" onclick="initscore()">
-            <input type="button" Value="resign" onclick="deluser()"> 
         </form>
+        <input type="button" Value="resign" onclick="deluser()"> 
         
     </body>
 </html>
